--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "trailingComma": "es5",
     "semi": false,
     "jsxSingleQuote": true,
-    "htmlWhitespaceSensitivity": "strict"
+    "htmlWhitespaceSensitivity": "strict",
+    "jsxBracketSameLine": true
 }
